Bug 233863 - default main window size too small for main menu
Summary: default main window size too small for main menu
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: git master
Platform: Android Android 11.x
: NOR normal
Target Milestone: 5.6.2
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-09 19:30 UTC by Sam S.
Modified: 2021-11-25 14:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sam S. 2010-04-09 19:30:11 UTC
Version:           3.9.99 (revision 1110252) (using KDE 4.4.2)

Screenshot: http://img594.imageshack.us/img594/6871/mainwindow.png

Looks weird.
Technically a non-issue as anyone can resize it to his liking, but first impressions count...
Also, not every writer of a KDevelop 4.0 review might be bothered to resize it before taking a screenshot, and it would be a shame this is how KDevelop would be portrayed on the web...
Comment 1 Andreas Pakulat 2010-04-09 22:36:15 UTC
Problem is that we still have to care about netbook-size screens, which means 1024x768 as desktop size. So we can't just take some default size that will always show everything properly. Not to mention that font sizes and styles can adjust the look a lot too. 

Frankly, a review posted by someone who cannot be bothered to resize the window properly is not worth the disk space its stored on. I don't give a shit about such things.
Comment 2 Andreas Pakulat 2010-04-09 22:44:34 UTC
SVN commit 1113076 by apaku:

Increase initial size a bit.

Default size may be a bit too smal to fit everything properly onto the
screen. Larger default size is not really possible, due to desktop size.
I'm anticipating 1024x768 as a reasonable smallest size for the desktop,
in which case this size is almost fullscreen.

BUG:233863

 M  +1 -1      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1113076