Increase initial size a bit.

Default size may be a bit too smal to fit everything properly onto the
screen. Larger default size is not really possible, due to desktop size.
I'm anticipating 1024x768 as a reasonable smallest size for the desktop,
in which case this size is almost fullscreen.

BUG:233863